--- a/BU Transit Redux/Main_iPhone.storyboard
+++ b/BU Transit Redux/Main_iPhone.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qcb-bn-3hR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qcb-bn-3hR">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
-        <!--List View Controller - BU Transit-->
+        <!--BU Transit-->
         <scene sceneID="Tuo-5Q-UZ7">
             <objects>
                 <tableViewController id="AwM-qY-5dC" customClass="ListViewController" sceneMemberID="viewController">
@@ -33,7 +34,7 @@
             </objects>
             <point key="canvasLocation" x="976" y="-159"/>
         </scene>
-        <!--Navigation Controller - List-->
+        <!--List-->
         <scene sceneID="xoA-Wy-1UL">
             <objects>
                 <navigationController storyboardIdentifier="listNav" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="34x-pC-ade" sceneMemberID="viewController">
@@ -59,7 +60,7 @@
             </objects>
             <point key="canvasLocation" x="100" y="346"/>
         </scene>
-        <!--Navigation Controller - Item-->
+        <!--Item-->
         <scene sceneID="F6A-f9-bjQ">
             <objects>
                 <navigationController storyboardIdentifier="mapNav" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="VdJ-rE-d0r" sceneMemberID="viewController">
@@ -76,7 +77,7 @@
             </objects>
             <point key="canvasLocation" x="574" y="507"/>
         </scene>
-        <!--Map View Controller - BU Transit-->
+        <!--BU Transit-->
         <scene sceneID="nh9-Zl-YpK">
             <objects>
                 <viewController id="OKX-pr-mEW" customClass="MapViewController" sceneMemberID="viewController">
@@ -97,7 +98,7 @@
             </objects>
             <point key="canvasLocation" x="976" y="507"/>
         </scene>
-        <!--Twitter View Controller - Root View Controller-->
+        <!--Root View Controller-->
         <scene sceneID="ZHZ-KI-hWp">
             <objects>
                 <tableViewController id="Hho-t0-X1s" customClass="TwitterViewController" sceneMemberID="viewController">
@@ -126,7 +127,7 @@
             </objects>
             <point key="canvasLocation" x="912" y="2419"/>
         </scene>
-        <!--Navigation Controller - Twitter-->
+        <!--Twitter-->
         <scene sceneID="O48-GV-krQ">
             <objects>
                 <navigationController storyboardIdentifier="twitterNav" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="g31-y7-7y5" sceneMemberID="viewController">
@@ -142,7 +143,7 @@
             </objects>
             <point key="canvasLocation" x="574" y="1917"/>
         </scene>
-        <!--Navigation Controller - Settings-->
+        <!--Settings-->
         <scene sceneID="dt9-5e-qsF">
             <objects>
                 <navigationController storyboardIdentifier="settingsNav" definesPresentationContext="YES" id="O1a-dG-j3s" sceneMemberID="viewController">
@@ -192,7 +193,7 @@
             </objects>
             <point key="canvasLocation" x="574" y="-864"/>
         </scene>
-        <!--Navigation Controller - Help-->
+        <!--Help-->
         <scene sceneID="c8n-ph-GJu">
             <objects>
                 <navigationController storyboardIdentifier="helpNav" definesPresentationContext="YES" id="qcO-lF-gXh" sceneMemberID="viewController">
@@ -216,23 +217,13 @@
                         <viewControllerLayoutGuide type="top" id="x44-9a-H6q"/>
                         <viewControllerLayoutGuide type="bottom" id="Y4v-k3-yvR"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="QZL-lK-YMM" customClass="S">
+                    <view key="view" contentMode="scaleToFill" id="QZL-lK-YMM">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c6L-P5-lsw">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </webView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="Lme-Mt-hoQ"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="webView" destination="c6L-P5-lsw" id="u53-7Y-NJ8"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6yQ-4b-jgN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
