--- a/BU Transit Redux/Main_iPhone.storyboard
+++ b/BU Transit Redux/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qcb-bn-3hR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="Qcb-bn-3hR">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -28,6 +28,7 @@
                             <outlet property="delegate" destination="AwM-qY-5dC" id="ASi-c2-eYl"/>
                         </connections>
                     </tableView>
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <navigationItem key="navigationItem" title="BU Transit" id="mV3-kB-6kM"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tEx-ti-Xp3" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -38,6 +39,7 @@
         <scene sceneID="xoA-Wy-1UL">
             <objects>
                 <navigationController storyboardIdentifier="listNav" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="34x-pC-ade" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <tabBarItem key="tabBarItem" title="List" image="BUT_ListIcon.png" id="dME-fd-imt"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="fMy-vK-kWU">
                         <autoresizingMask key="autoresizingMask"/>
@@ -54,6 +56,7 @@
         <scene sceneID="bwD-96-bcq">
             <objects>
                 <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Qcb-bn-3hR" customClass="PageViewController" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" id="sRx-QF-muk"/>
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WNY-U0-st4" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -64,6 +67,7 @@
         <scene sceneID="F6A-f9-bjQ">
             <objects>
                 <navigationController storyboardIdentifier="mapNav" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="VdJ-rE-d0r" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <tabBarItem key="tabBarItem" title="Item" image="BUT_HelpIcon.png" id="UQ6-Bq-vyc"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="kUG-PF-0hA">
@@ -82,12 +86,13 @@
             <objects>
                 <viewController id="OKX-pr-mEW" customClass="MapViewController" sceneMemberID="viewController">
                     <mapView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="3AI-FU-VkJ">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <connections>
                             <outlet property="delegate" destination="OKX-pr-mEW" id="ypr-4u-fWd"/>
                         </connections>
                     </mapView>
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <navigationItem key="navigationItem" title="BU Transit" id="ax1-UV-nAv"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -121,16 +126,18 @@
                             <outlet property="delegate" destination="Hho-t0-X1s" id="zW1-iQ-bHZ"/>
                         </connections>
                     </tableView>
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <navigationItem key="navigationItem" title="Root View Controller" id="4ja-Lf-h8A"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xop-ed-vG5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="912" y="2419"/>
+            <point key="canvasLocation" x="976" y="2205"/>
         </scene>
         <!--Twitter-->
         <scene sceneID="O48-GV-krQ">
             <objects>
                 <navigationController storyboardIdentifier="twitterNav" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="g31-y7-7y5" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <tabBarItem key="tabBarItem" title="Twitter" image="BUT_TwitterIcon.png" id="o9f-vZ-yR8"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ad9-Vf-WlC">
                         <autoresizingMask key="autoresizingMask"/>
@@ -147,7 +154,10 @@
         <scene sceneID="dt9-5e-qsF">
             <objects>
                 <navigationController storyboardIdentifier="settingsNav" definesPresentationContext="YES" id="O1a-dG-j3s" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <tabBarItem key="tabBarItem" title="Settings" image="BUT_SettingsIcon.png" id="vAD-QL-WDp"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="568"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2hq-xL-gsR">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -163,16 +173,78 @@
         <scene sceneID="SKe-Bs-Dbg">
             <objects>
                 <viewController id="aBd-eA-bIk" customClass="SettingsViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="oP9-wc-dJA"/>
-                        <viewControllerLayoutGuide type="bottom" id="y4K-eg-l9I"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="xqS-wt-nwe">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="9Ad-zM-H6b">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Kgh-fG-LUu">
+                                        <rect key="frame" x="16" y="408" width="288" height="40"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                        <state key="normal" title="Send Feedback/Request Feature">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="feedbackButtonPressed:" destination="aBd-eA-bIk" eventType="touchUpInside" id="Au9-dp-eMl"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" id="H8Q-s8-RYv">
+                                        <rect key="frame" x="16" y="8" width="288" height="91"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Open on Launch" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="WbY-Vv-1qD">
+                                                <rect key="frame" x="77" y="16" width="134" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="List View" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EvO-ur-Ucy">
+                                                <rect key="frame" x="30" y="50" width="75" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Map View" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="X4k-8d-yhj">
+                                                <rect key="frame" x="186" y="50" width="79" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="4eC-ZM-bk0">
+                                                <rect key="frame" x="120" y="45" width="51" height="31"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                                <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="onTintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <connections>
+                                                    <action selector="onLaunchSwitchChanged:" destination="aBd-eA-bIk" eventType="valueChanged" id="deU-jx-qgp"/>
+                                                </connections>
+                                            </switch>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <navigationItem key="navigationItem" id="aHe-Vo-AYc"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="568"/>
+                    <connections>
+                        <outlet property="onLaunchSwitch" destination="4eC-ZM-bk0" id="lxV-Lt-ue5"/>
+                        <outlet property="onLaunchSwitchBackgroundView" destination="H8Q-s8-RYv" id="S1o-2o-Jdy"/>
+                        <outlet property="scrollView" destination="9Ad-zM-H6b" id="em1-KZ-lXY"/>
+                        <outlet property="sendFeedbackButton" destination="Kgh-fG-LUu" id="bW6-GU-K8W"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WdY-WS-EKp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -181,7 +253,8 @@
         <!--Navigation Controller-->
         <scene sceneID="xvf-ET-o0Y">
             <objects>
-                <navigationController storyboardIdentifier="scheduleNav" definesPresentationContext="YES" id="Uiu-Vi-PR4" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="scheduleNav" definesPresentationContext="YES" toolbarHidden="NO" id="Uiu-Vi-PR4" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Hxy-jj-Vsx">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -213,15 +286,12 @@
         <scene sceneID="N7x-4s-HTF">
             <objects>
                 <viewController id="E1B-Di-GjV" customClass="ScheduleViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="x44-9a-H6q"/>
-                        <viewControllerLayoutGuide type="bottom" id="Y4v-k3-yvR"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="QZL-lK-YMM">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <navigationItem key="navigationItem" id="Lme-Mt-hoQ"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
@@ -233,10 +303,6 @@
         <scene sceneID="I8F-2I-6yJ">
             <objects>
                 <viewController id="OP5-MW-Hgf" customClass="HelpViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="asc-6G-9ph"/>
-                        <viewControllerLayoutGuide type="bottom" id="mss-j3-wXo"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="z0c-gK-yok">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
